# binseek

./: .gitignore  AGENTS.md  Makefile  README.md  agents.md  issue.md  project.md  pyproject.toml  requirements.txt
.agents/skills/binseek-test/: SKILL.md
.agents/skills/binseek-test/scripts/: run-tests.py
binseek/: __init__.py  __main__.py  app.py  test_fd.py
binseek/core/: _native.py
binseek/model/: buffer.py
binseek/ui/: confirm_dialog.py  file_dialog.py  find_dialog.py  goto_dialog.py  help_dialog.py  hex_view.py  input_dialog.py  menu_bar.py  replace_dialog.py  status_bar.py  utils.py
src/cpp/: binseek_core.cpp  editor.cpp  mmap_file.cpp  mmap_file.h  regex_search.cpp  search.cpp
src/cpp/include/: binseek.h  editor.h  regex_search.h  search.h
tests/: large_file_bench.py  test_buffer.py  test_cli.py  test_ui.py  test_utils.py
tests/cpp/: test_core.cpp
