[project]
name = "binseek"
version = "0.1.4"
description = "A TUI binary file viewer, searcher and editor."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.70",
]

[project.scripts]
binseek = "binseek.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["binseek*"]

[tool.setuptools.package-data]
binseek = ["libcore.dll", "libcore.so"]
